# bgnd_dist

./: README.md  setup.py
bgnd_dist/: README.md  setup.cfg
binormal_distributions/: README.md  setup.cfg
