[metadata]
name = "bgnd_dist"
version = 1.1
author = [
  { name="Betini Akarandut", email="betiniakarandut@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
description = README.md
url = "https://github.com/betiniakarandut/bgnd_dist"
